--- a/index.html
+++ b/index.html
@@ -182,18 +182,18 @@
           </div>
           <div class="portfolio__item">
             <picture>
-              <source type="image/jpeg" srcset="./assets/projects" />
+              <source type="image/jpeg" srcset="./assets/projects/poo_java.png" />
               <img class="portfolio__img" alt="portfolio item" />
             </picture>
             <div class="portfolio__description">
-              <h3 class="portfolio__description--title">OOP</h3>
+              <h3 class="portfolio__description--title">OOP Exercise</h3>
               <p class="portfolio__description--text">OOP Practice: Java</p>
               <div class="buttons__container">
-                <a class="button" href="" target="_blank"
+                <a class="button" href="https://filipchi.github.io/Java_OOP/" target="_blank"
                   rel="noopener noreferrer">
                   <i class="fas fa-globe-americas"></i> Website
                 </a>
-                <a class="button" href="" target="_blank"
+                <a class="button" href="https://github.com/Filipchi/Java_OOP/tree/code" target="_blank"
                   rel="noopener noreferrer">
                   <i class="fab fa-github"></i> Repository
                 </a>
