--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       content="Physical Engineer, here you will find information about the projects I have done." />
     <meta property="og:description"
       content="Physical Engineer, here you will find information about the projects I have done. " />
-    <meta property="og:title" content="Jhon Fredy Ospina | Physical Engineer" />
+    <meta property="og:title" content="Jhon Fredy Ospina | Physics Engineer" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Jhon Fredy Ospina | Physical Engineer" />
+    <meta property="og:site_name" content="Jhon Fredy Ospina | Physics Engineer" />
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="apple-touch-icon" href="./assets/logo.png" />
     <link rel="apple-touch-icon" sizes="120x120" href="./assets/logo-120x120.png" />
@@ -64,7 +64,7 @@
       <div class="home__description">
         <span class="home__title--primary">Hi!</span>
         <h1 class="home__title">I'm Jhon Fredy Ospina</h1>
-        <span class="home__title--secondary">Physical Engineer</span>
+        <span class="home__title--secondary">Physics Engineer</span>
       </div>
     </section>
 
@@ -74,10 +74,10 @@
         <div class="about__grid">
           <div class="about__description">
             <h2>Who am I?</h2>
-            <h2>I'm Jhon Fredy Ospina, Physical Engineer.</h2>
+            <h2>I'm Jhon Fredy Ospina, Physics Engineer.</h2>
             <p>
               I am a person with a strong desire to learn and explore the different tools that programming offers. In
-              addition, in my training as a physical engineer, I consider myself like a person with outstanding
+              addition, in my training as a physics engineer, I consider myself like a person with outstanding
               analytical skills.
             </p>
 
