--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           <li class="navbar__link" data-ref="portfolio">
             <a href="#portfolio">Portfolio</a>
           </li>
+          <li class="navbar__link" data-ref="otherProjects">
+            <a href="#otherProjects">Other Proyects</a>
+          </li>
           <li class="navbar__link" data-ref="hobbies">
             <a href="#hobbies">Hobbies</a>
           </li>
@@ -169,8 +172,7 @@
                 Web Application: JS, CSS, HTML, Vue.js, BootstrapVue, Vuetify, MongoBD, Heroku
               </p>
               <div class="buttons__container">
-                <a class="button" href="https://mrempanada2.herokuapp.com/" target="_blank"
-                  rel="noopener noreferrer">
+                <a class="button" href="https://mrempanada2.herokuapp.com/" target="_blank" rel="noopener noreferrer">
                   <i class="fas fa-globe-americas"></i> Website
                 </a>
                 <a class="button" href="https://github.com/Grupo1postventas/MrEmpanada-MEVN" target="_blank"
@@ -189,8 +191,7 @@
               <h3 class="portfolio__description--title">OOP Exercise</h3>
               <p class="portfolio__description--text">OOP Practice: Java</p>
               <div class="buttons__container">
-                <a class="button" href="https://filipchi.github.io/Java_OOP/" target="_blank"
-                  rel="noopener noreferrer">
+                <a class="button" href="https://filipchi.github.io/Java_OOP/" target="_blank" rel="noopener noreferrer">
                   <i class="fas fa-globe-americas"></i> Website
                 </a>
                 <a class="button" href="https://github.com/Filipchi/Java_OOP/tree/code" target="_blank"
@@ -199,6 +200,39 @@
                 </a>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="otherProjects" class="title1">
+      <div class="container">
+        <h2 class="section__title">Other Proyects</h2>
+        <h3 class="section__subtitle">Here you can see other projects that I have done:</h3>
+        <br><br><br><br><br>
+        <div class="portfolio__grid">
+          <div class="portfolio__item">
+
+          </div>
+          <div class="portfolio__item">
+            <picture>
+              <source type="image/jpeg" srcset="./assets/projects/thesis.png" />
+              <img class="portfolio__img" alt="portfolio item" />
+            </picture>
+            <div class="portfolio__description">
+              <h3 class="portfolio__description--title">Thesis</h3>
+              <p class="portfolio__description--text">
+                Physics Engineering, Material Science
+              </p>
+              <div class="buttons__container">
+                <a class="button" href="./assets/projects/Tesis_TiFe2O4.pdf" download="Tesis_TiFe2O4"
+                  target="_blank" rel="noopener noreferrer">
+                  <i class="fas fa-file-download"></i>   Download Thesis
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="portfolio__item">
           </div>
         </div>
       </div>
@@ -249,25 +283,25 @@
             Contact me if you want us to work together.
           </h3>
           <div class="contact__grid">
-  
-            <a href="mailto:fredyospina119@gmail.com" target="_blank" >
+
+            <a href="mailto:jf.osgal@gmail.com" target="_blank">
               <div class="contact__item">
                 <i class="far fa-envelope"></i>
               </div>
             </a>
-  
+
             <a href="https://github.com/filipchi" target="_blank">
               <div class="contact__item">
                 <i class="fab fa-github"></i>
               </div>
             </a>
-  
+
             <a href="https://gitlab.com/Filipchi" target="_blank" rel="noopener noreferrer">
               <div class="contact__item">
                 <i class="fab fa-gitlab"></i>
               </div>
             </a>
-  
+
             <a href="https://www.linkedin.com/in/jf-ospina/" target="_blank" rel="noopener noreferrer">
               <div class="contact__item">
                 <i class="fab fa-linkedin-in"></i>
@@ -279,7 +313,7 @@
       <br><br><br>
       <div class="container">
         <h4>
-          Copyright © 2021. <a href="#">@jf-ospina</a> <br />
+          Copyright © 2021. <a href="#">Jhon Fredy Ospina Galeano</a> <br />
           All Rights Reserved
         </h4>
       </div>
