--- a/index.html
+++ b/index.html
@@ -137,7 +137,6 @@
       <div class="container">
         <h2 class="section__title">Portfolio</h2>
         <h3 class="section__subtitle">Here you can see the projects I have worked on.</h3>
-        <br><br><br><br><br>
         <div class="portfolio__grid">
           <div class="portfolio__item">
             <picture>
@@ -184,6 +183,27 @@
           </div>
           <div class="portfolio__item">
             <picture>
+              <source type="image/jpeg" srcset="./assets/projects/birdpy.png" />
+              <img class="portfolio__img" alt="portfolio item" />
+            </picture>
+            <div class="portfolio__description">
+              <h3 class="portfolio__description--title">BirdPy</h3>
+              <p class="portfolio__description--text">
+                Web Application: CSS, HTML, Bootstrap, Flask, Python ... <br>
+                Project in progress
+              </p>
+              <div class="buttons__container">
+                <a class="button" href="https://filipchi.github.io/BirdPy/" target="_blank" rel="noopener noreferrer">
+                  <i class="fas fa-globe-americas"></i> Website
+                </a>
+                <a class="button" href="https://github.com/Filipchi/BirdPy" target="_blank" rel="noopener noreferrer">
+                  <i class="fab fa-github"></i> Repository
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="portfolio__item">
+            <picture>
               <source type="image/jpeg" srcset="./assets/projects/poo_java.png" />
               <img class="portfolio__img" alt="portfolio item" />
             </picture>
@@ -212,7 +232,6 @@
         <br><br><br><br><br>
         <div class="portfolio__grid">
           <div class="portfolio__item">
-
           </div>
           <div class="portfolio__item">
             <picture>
@@ -225,9 +244,9 @@
                 Physics Engineering, Material Science
               </p>
               <div class="buttons__container">
-                <a class="button" href="./assets/projects/Tesis_TiFe2O4.pdf" download="Tesis_TiFe2O4"
-                  target="_blank" rel="noopener noreferrer">
-                  <i class="fas fa-file-download"></i>   Download Thesis
+                <a class="button" href="./assets/projects/Tesis_TiFe2O4.pdf" download="Tesis_TiFe2O4" target="_blank"
+                  rel="noopener noreferrer">
+                  <i class="fas fa-file-download"></i> Download Thesis
                 </a>
               </div>
             </div>
