--- a/index.html
+++ b/index.html
@@ -181,22 +181,21 @@
               </div>
             </div>
           </div>
+
           <div class="portfolio__item">
             <picture>
-              <source type="image/jpeg" srcset="./assets/projects/birdpy.png" />
+              <source type="image/jpeg" srcset="./assets/projects/candy_machine.png" />
               <img class="portfolio__img" alt="portfolio item" />
             </picture>
             <div class="portfolio__description">
-              <h3 class="portfolio__description--title">BirdPy</h3>
-              <p class="portfolio__description--text">
-                Web Application: CSS, HTML, Bootstrap, Flask, Python ... <br>
-                Project in progress
-              </p>
+              <h3 class="portfolio__description--title">Candy Machine</h3>
+              <p class="portfolio__description--text">OOP Practice: Java</p>
               <div class="buttons__container">
-                <a class="button" href="https://filipchi.github.io/BirdPy/" target="_blank" rel="noopener noreferrer">
+                <a class="button" href="https://filipchi.github.io/CandyMachine_page/" target="_blank" rel="noopener noreferrer">
                   <i class="fas fa-globe-americas"></i> Website
                 </a>
-                <a class="button" href="https://github.com/Filipchi/BirdPy" target="_blank" rel="noopener noreferrer">
+                <a class="button" href="https://github.com/Filipchi/CandyMachine_code" target="_blank"
+                  rel="noopener noreferrer">
                   <i class="fab fa-github"></i> Repository
                 </a>
               </div>
@@ -221,6 +220,28 @@
               </div>
             </div>
           </div>
+          <div class="portfolio__item">
+            <picture>
+              <source type="image/jpeg" srcset="./assets/projects/birdpy.png" />
+              <img class="portfolio__img" alt="portfolio item" />
+            </picture>
+            <div class="portfolio__description">
+              <h3 class="portfolio__description--title">BirdPy</h3>
+              <p class="portfolio__description--text">
+                Web Application: CSS, HTML, Bootstrap, Flask, Python ... <br>
+                Project in progress
+              </p>
+              <div class="buttons__container">
+                <a class="button" href="https://filipchi.github.io/BirdPy/" target="_blank" rel="noopener noreferrer">
+                  <i class="fas fa-globe-americas"></i> Website
+                </a>
+                <a class="button" href="https://github.com/Filipchi/BirdPy" target="_blank" rel="noopener noreferrer">
+                  <i class="fab fa-github"></i> Repository
+                </a>
+              </div>
+            </div>
+          </div>
+          
         </div>
       </div>
     </section>
@@ -287,7 +308,7 @@
               <img class="portfolio__img" alt="portfolio item" />
             </picture>
             <div class="portfolio__description">
-              <h2 class="portfolio__description--title">Bird Watching<br><br></h2>
+              <h2 class="portfolio__description--title">Birding<br><br></h2>
             </div>
           </div>
         </div>
